--- a/compiler.opam
+++ b/compiler.opam
@@ -2,16 +2,19 @@
 opam-version: "2.0"
 synopsis: "A short synopsis"
 description: "A longer description"
-maintainer: ["Maintainer Name <maintainer@example.com>"]
-authors: ["Author Name <author@example.com>"]
-license: "LICENSE"
+maintainer: ["Mario Hlebarov <themariohlebarov@gmail.com>"]
+authors: ["Mario Hlebarov <themariohlebarov@gmail.com>"]
+license: "MIT"
 tags: ["add topics" "to describe" "your" "project"]
-homepage: "https://github.com/username/reponame"
-doc: "https://url/to/documentation"
-bug-reports: "https://github.com/username/reponame/issues"
+homepage: "https://github.com/Maruncho/C-Toy-Compiler"
+doc: "https://github.com/Maruncho/C-Toy-Compiler"
+bug-reports: "https://github.com/Maruncho/C-Toy-Compiler/issues"
 depends: [
   "dune" {>= "3.17"}
   "ocaml"
+  "zarith"
+  "core"
+  "re"
   "odoc" {with-doc}
 ]
 build: [
@@ -28,4 +31,4 @@ build: [
     "@doc" {with-doc}
   ]
 ]
-dev-repo: "git+https://github.com/username/reponame.git"
+dev-repo: "git+https://github.com/Maruncho/C-Toy-Compiler.git"
